--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   object-fit: cover; /* Ensure the GIF covers the container */
 }
 
-/* Container for form and dashboard side by side */
+/* Styling for form and dashboard side by side */
 .main-container {
   display: flex;
   width: 100%;
@@ -60,13 +60,13 @@
   width: 50%;
   background-color: #f8f9fa; /* Light gray background */
   padding: 20px;
+  margin-top: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Styling for form groups, with margin and dark gray text */
 .form-group {
-  margin-bottom: 20px;
   color: #333;
 }
 
@@ -75,7 +75,7 @@ label {
   display: block;
   font-weight: bold;
   margin-bottom: 5px;
-  color: #495057; /* Dark gray text color */
+  color: black; /* Dark gray text color */
 }
 
 /* Styling for text inputs and file inputs */
@@ -99,18 +99,6 @@ input[type="file"]:focus {
 /* Styling for the list of uploaded file names */
 .file-names {
   margin-top: 15px;
-}
-
-/* Styling for the list container with grid layout */
-.file-names-list {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-  padding: 10px;
-  border: 1px solid #ced4da; /* Light gray border */
-  border-radius: 4px;
-  max-height: 150px; /* Limiting height */
-  overflow-y: auto; /* Adding scrollbar when content exceeds */
 }
 
 /* Styling for each file name container */
@@ -222,55 +210,4 @@ button[type="submit"]:hover {
   color: white;
   border-radius: 4px;
   z-index: 1000; /* Ensure it's above other content */
-}
-
-/* Dashboard.css */
-.dashboard {
-  width: 50%;
-  margin-top: 20px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.dashboard h2 {
-  margin-bottom: 20px;
-  color: #333;
-}
-
-.dashboard table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.dashboard th, .dashboard td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-}
-
-.dashboard th {
-  background-color: #f4f4f4;
-}
-
-.dashboard tbody tr:nth-child(even) {
-  background-color: #f9f9f9;
-}
-
-.dashboard tbody tr:hover {
-  background-color: #eaeaea;
-}
-
-.dashboard tbody tr td {
-  color: #555;
-}
-
-.dashboard tbody tr td:nth-child(1) {
-  font-weight: bold;
-}
-
-.dashboard tbody tr td:nth-child(2),
-.dashboard tbody tr td:nth-child(3) {
-  text-align: center;
 }
